--- a/ValueFctIteration_MESSINA_MUNOZ.ipynb
+++ b/ValueFctIteration_MESSINA_MUNOZ.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook I: Value function iteration"
+    "# Notebook Value function iteration"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "source": [
     "In this jupyter notebook we apply the value function iteration method to some examples.\n",
     "\n",
-    "We start with the cake eating example (see Example 0.1 and Section 3.2). For this example the exact value function is known. Thus we can compare the approximated value function with the exact one. "
+    "We start with the cake eating example For this example the exact value function is known. Thus we can compare the approximated value function with the exact one. "
    ]
   },
   {
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now consider Example 0.2, Variant 2.  "
+    "We now consider a Risk taking dilemma"
    ]
   },
   {
