Update and rename ValueFctIteration_MESSINA_MUNOZ.ipynb to valueFunctionIteration.ipynb

--- a/valueFunctionIteration.ipynb
+++ b/valueFunctionIteration.ipynb
@@ -33,7 +33,7 @@
     "V(x) = (1- \\alpha^{\\frac{1}{\\gamma}} ) ^{-\\gamma} \\frac{x^{1-\\gamma}}{1-\\gamma} \n",
     "\\end{align}\n",
     "\n",
-    "(see Section 3.2). The following Python code introduces the function into our notebook: "
+    "The following Python code introduces the function into our notebook: "
    ]
   },
   {
